--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <div id="game-board"></div>
+    <h1 class="title">Happy Tree Friends - Pexeso</h1>
+    <div id="game-board" class="game-board"></div>
+    <button class="play-again-btn">Play again</button>
 </body>
 
 </html>
